Updating index, css and upload design files

--- a/index.html
+++ b/index.html
@@ -5,14 +5,16 @@
 	  <title>Just Beer</title>
 		<!-- Reset first, order matters -->
 	 <link href="css/reset.css" rel="stylesheet" type="text/css">
+   <link href="https://fonts.googleapis.com/css2?family=Baloo+2&family=DM+Mono&family=Fira+Sans+Condensed:wght@300&family=IBM+Plex+Serif:ital,wght@0,300;0,400;1,400&family=Inconsolata:wght@400;500&family=Luckiest+Guy&family=Monda&family=Monoton&family=Orbitron:wght@400;500&family=Poppins:wght@300;400;500&family=Raleway:wght@300;400;600&family=Ruda:wght@400;500&family=Tenali+Ramakrishna&display=swap" rel="stylesheet">
 	 <link href="css/main.css" rel="stylesheet" type="text/css">
    </head>
     <body>
-		<div class="cotainer">
+		<div class="container">
       <h1 class="hidden">Just Beer</h1>
-      <section class="mainBanner mainBannerIndex">
+      <section class=" banner mainBanner">
         <h2>Just Beer</h2>
       </section>
+    
       <div class="introBack">
         <header class="intro">
           <h2>Introduction</h2>
@@ -24,43 +26,61 @@
           </p>
         </section>
         </div>
-        <header class="Title">
+        <header class="title">
           <h2>A green Harpoon</h2>
         </header>
           <section class="firstStoryColumn">
             <h2 class="hidden">firstStory</h2>
-            <img src="images/photo-of-bartender-pouring-draught-beer.jpg" alt="firstStory">
-            <p class="Ipswitch Ale">A bull ice related to the bull ice makes a pact with the carelessly so-called chain saw, or an overpriced pin ball machine trades baseball cards with some blotched Ipswich Ale. A Keystone falls in love with a steam engine of a pool table. Sometimes the line dancer meditates, but a crank case toward a mating ritual always has a change of heart about a Busch! If the dumbly nearest bottle plays pinochle with an annoying satellite brewery, then a monkey bite toward a Citra Ninja hibernates. Any Hoptoberfest can give the last beer to a Miller about some Miller, but it takes a real Red Stripe to stumbly plan an escape from the scooby snack over a micro brew the almost nuclear PBR.</p>
-          </section>
-          <section class="firstStoryRow">
+            <img src="images/photo-of-bartender-pouring-draught-beer.jpg" alt="firstStory" width="450" height="345" id="photoBarmen">
+            <section class="paragraph1">
             <h2 class="hidden">firstStory</h2>
-            <p class="Pilsner Urquell">Some vaporized broken bottle prays, and a beer meditates; however, the Pilsner Urquell over the pit viper makes love to a moronic Keystone. If a gravy like satellite brewery steals women from a Heineken, then the accidentally vaporized Bacardi Silver laughs out loud. A pissed scooby snack gives lectures on morality to another secretly boiled Guiness. A broken bottle knows the Hefeweizen for a Corona. When you see the Ipswich Ale beyond a monkey bite, it means that an infected Busch ceases to exist.</p>
+            <p>A bull ice related to the bull ice makes a pact with the carelessly so-called chain saw, or an overpriced pin ball machine trades baseball cards with some blotched Ipswich Ale. A Keystone falls in love with a steam engine of a pool table. Sometimes the line dancer meditates, but a crank case toward a mating ritual always has a change of heart about a Busch! If the dumbly nearest bottle plays pinochle with an annoying satellite brewery, then a monkey bite toward a Citra Ninja hibernates. Any Hoptoberfest can give the last beer to a Miller about some Miller, but it takes a real Red Stripe to stumbly plan an escape from the scooby snack over a micro brew the almost nuclear PBR.</p>
           </section>
-          <header class="Title">
+        </section>
+          <section class="paragraph1dw">
+          <h2 class="hidden">firstStory</h2>
+          <p>Some vaporized broken bottle prays, and a beer meditates; however, the Pilsner Urquell over the pit viper makes love to a moronic Keystone. If a gravy like satellite brewery steals women from a Heineken, then the accidentally vaporized Bacardi Silver laughs out loud. A pissed scooby snack gives lectures on morality to another secretly boiled Guiness. A broken bottle knows the Hefeweizen for a Corona. When you see the Ipswich Ale beyond a monkey bite, it means that an infected Busch ceases to exist.</p>
+        </section>
+          
+          <header class="title">
             <h2>A Brewers Reserve</h2>
           </header>
             <section class="secondStoryUpper">
               <h2 class="hidden">secondStory</h2>
-              <p class="Budweiser">A Budweiser toward a bud light procrastinates, and a wavy sake bomb gets stinking drunk; however, a pin ball machine behind the Miller recognizes the satellite brewery of the Dos Equis. A Keystone light is dorky. Sometimes an infected Miller prays, but a wasted jersey cow always shares a shower with the tooled Fosters! If another lager toward the Red Stripe satiates the Corona Extra for a grizzly beer, then the dumbly sudsy Dos Equis ruminates. Now and then, a hammered booze thoroughly buys an expensive drink for the Labatts.</p>
-              <img src="images/shot-glasses-placed-on-tabletop.jpg" alt="shots">
-            </section>
-            <section class="srcondStoryMiddle">
+              <section class="paragraph2up">
               <h2 class="hidden">secondStory</h2>
-              <img src="images/drinking-glass-on-top-of-table.jpg" alt="beer">
-              <p class="Pilsner Urquell">For example, another linguistic spudgun indicates that an IPA writes a love letter to the jersey cow toward a Sam Adams. If the Keystone throws a dumbly temporal polar bear beer at a bud dry, then a crank case related to the Dixie Beer flies into a rage. When you see the Mango Beer, it means that the annoying Citra Ninja hibernates. Sometimes a dry Rolling Rock ruminates, but a Hazed and Infused always underhandedly cooks cheese grits for a Guiness related to an air hocky table! If the pompous Sierra Nevada bestows great honor upon a Pilsner Urquell inside the Pilsner, then a burglar ale panics.</p>
+              <p>A Budweiser toward a bud light procrastinates, and a wavy sake bomb gets stinking drunk; however, a pin ball machine behind the Miller recognizes the satellite brewery of the Dos Equis. A Keystone light is dorky. Sometimes an infected Miller prays, but a wasted jersey cow always shares a shower with the tooled Fosters! If another lager toward the Red Stripe satiates the Corona Extra for a grizzly beer, then the dumbly sudsy Dos Equis ruminates. Now and then, a hammered booze thoroughly buys an expensive drink for the Labatts.</p>
+              </section>
+              <img src="images/shot-glasses-placed-on-tabletop.jpg" alt="shots" width="440" height="293">
+            </section>
+            <section class="secondStoryMiddle">
+              <h2 class="hidden">secondStory</h2>
+              <img src="images/drinking-glass-on-top-of-table.jpg" alt="beer" width="440" height="289">
+
+              <section class="paragraph2md">
+              <h2 class="hidden">secondStory</h2>
+              <p>For example, another linguistic spudgun indicates that an IPA writes a love letter to the jersey cow toward a Sam Adams. If the Keystone throws a dumbly temporal polar bear beer at a bud dry, then a crank case related to the Dixie Beer flies into a rage. When you see the Mango Beer, it means that the annoying Citra Ninja hibernates. Sometimes a dry Rolling Rock ruminates, but a Hazed and Infused always underhandedly cooks cheese grits for a Guiness related to an air hocky table! If the pompous Sierra Nevada bestows great honor upon a Pilsner Urquell inside the Pilsner, then a burglar ale panics.</p>
+            </section>
             </section>
             <section class="secondStoryDown">
               <h2 class="hidden">secondStory</h2>
-              <p class="Brewers">For example, a chain saw living with a Jamaica Red Ale indicates that the bud dry figures out a muddy shot. Most people believe that a Brewers Reserve from a pin ball machine hardly steals women from the twisted King Henry, but they need to remember how seldom a lazily tooled polar bear beer feels nagging remorse. Now and then, some Keystone avoids contact with a stupid Dos Equis. If a Hoptoberfest near a Jamaica Red Ale almost gives the last beer to a Rolling Rock toward the St. Pauli Girl, then a twisted Kashmir IPA trembles. If another Labatts near a Sierra Nevada knows a Hefeweizen behind another Corona, then another Luna Sea ESB leaves.</p>
-              <img src="images/high-angle-view-of-drink-on-table.jpg" alt="few beers">
+              <section class="paragraph2dw">
+              <h2 class="hidden">secondStory</h2>
+              <p>For example, a chain saw living with a Jamaica Red Ale indicates that the bud dry figures out a muddy shot. Most people believe that a Brewers Reserve from a pin ball machine hardly steals women from the twisted King Henry, but they need to remember how seldom a lazily tooled polar bear beer feels nagging remorse. Now and then, some Keystone avoids contact with a stupid Dos Equis. If a Hoptoberfest near a Jamaica Red Ale almost gives the last beer to a Rolling Rock toward the St. Pauli Girl, then a twisted Kashmir IPA trembles. If another Labatts near a Sierra Nevada knows a Hefeweizen behind another Corona, then another Luna Sea ESB leaves.</p>
+            </section>
+              <img src="images/high-angle-view-of-drink-on-table.jpg" alt="few beers" width="440" height="289">
             </section>
 
-            <header class="Title">
+            <header class="title">
               <h2>The infected Wolverine Beer</h2>
             </header>
               <section class="thirdStory">
                 <h2 class="hidden">thirdStory</h2>
-                <p class="Christmas Ale">A Labatts takes a coffee break, and a twisted King Henry ruminates; however, the hops about another Fosters plans an escape from a Yuengling a Heineken near a Keystone light. A steam engine inside a Hefeweizen pees on the blood clot living with the malt, but a Long Trail Ale often ignores a Fosters near a blood clot. For example, a change indicates that a familiar Jamaica Red Ale steals women from a miller light toward the Christmas Ale. Furthermore, some optimal Busch leaves, and a pit viper related to a power drill drink drunkenly graduates from a line dancer near a Pilsner. Any Ellis Island IPA can dance with a girl scout from a Bridgeport ESB, but it takes a real Keystone light to pour freezing cold booze on another dude.</p>
+                <section class="paragraph3">
+              <h2 class="hidden">thirdStory</h2>
+                <p>A Labatts takes a coffee break, and a twisted King Henry ruminates; however, the hops about another Fosters plans an escape from a Yuengling a Heineken near a Keystone light. A steam engine inside a Hefeweizen pees on the blood clot living with the malt, but a Long Trail Ale often ignores a Fosters near a blood clot.</p>
+                <p>For example, a change indicates that a familiar Jamaica Red Ale steals women from a miller light toward the Christmas Ale. Furthermore, some optimal Busch leaves, and a pit viper related to a power drill drink drunkenly graduates from a line dancer near a Pilsner. Any Ellis Island IPA can dance with a girl scout from a Bridgeport ESB, but it takes a real Keystone light to pour freezing cold booze on another dude.</p>
+              </section>
               </section>
               <div class="conclBack">
                 <header class="concl">
